# AIAgents

./: README.md  pyproject.toml
project/: adk_helper.py  dataset.py  main.py
project/agents/: anomaly.py  data_cleaning.py  eda.py  insights.py  ml_model.py  report.py
project/webapp/: app.py
project/webapp/templates/: index.html  results.html
project/webapp/uploads/: 15619847-b2e2-420a-9ae9-1625415a15c3.csv  e27b361e-5b2b-4f19-bb4c-635ccf8962a1.csv
